# edge-ai-modem

./: .gitignore  CMakeLists.txt  Kconfig  README.md  circuitdojo_feather_nrf9160_ns.overlay  prj.conf
include/: lowpower.h  modem.h  nrf_wakeup.h  roadrunner_wakeup.h  serial_interface.h
src/: lowpower.c  main.c  modem.c  nrf_wakeup.c  roadruner_wakeup.c  serial_interface.c
